# paper

./: README.md  meson.build
data/: Application.css  meson.build  paper.desktop.in  paper.gresource.xml  paper.gschema.xml  paper.metainfo.xml.in  quicknote.desktop.in  quicknote.gresource.xml  quicknote.gschema.xml  quicknote.metainfo.xml.in
po/extra/: POTFILES
src/: Application.vala  MainWindow.vala  meson.build
src/Model/: NoteFile.vala  Notebook.vala  NotebookManager.vala  Parser.vala  Viewport.vala
src/Model/Content/: Background.vala  Content.vala  Item.vala  OriginIndicator.vala  Page.vala  PageFormat.vala  Pattern.vala  ViewMode.vala
src/Model/Content/Backgrounds/: WhiteBackground.vala
src/Model/Content/ItemStore/: ItemStore.vala  Selection.vala
src/Model/Content/Items/: SelectedItem.vala  Stroke.vala
src/Model/Content/Patterns/: GridRenderer.vala  GridStyle.vala  PatternRenderer.vala  PatternStyle.vala
src/Model/Content/ViewModes/: InfiniteViewMode.vala
src/Model/Database/: Database.vala
src/Model/Engine/: Engine.vala  Viewport.vala
src/Model/Engine/Content/: Content.vala  Page.vala  Pattern.vala
src/Model/Engine/Content/Backgrounds/: WhiteBackground.vala
src/Model/Engine/Content/ItemStore/: ItemStore.vala
src/Model/Engine/Content/Items/: Stroke.vala
src/Model/Engine/Exporter/: Exporter.vala  PdfExporter.vala
src/Model/Engine/Manipulation/: Tool.vala  ToolSelection.vala
src/Model/Engine/Manipulation/Tools/: Eraser.vala  Pen.vala  RectangleSelector.vala  SelectionFrame.vala  SelectionManager.vala
src/Model/Engine/Renderer/: ContentPaintable.vala  ItemRenderer.vala  RenderFlags.vala  RenderNodeCache.vala  Renderer.vala
src/Model/Exporter/: PdfExporter.vala
src/Model/Files/: Directory.vala  FileBase.vala  FileModel.vala  Note.vala  NoteFile.vala  OperationManager.vala
src/Model/Geometry/: Line.vala  Point.vala
src/Model/Manipulation/: Manipulator.vala  Tool.vala  ToolSelection.vala  ToolStore.vala
src/Model/Manipulation/Tools/: Eraser.vala  Pen.vala  RectangleSelector.vala  ResizeNode.vala  SelectionFrame.vala  SelectionManager.vala
src/Model/Note/: Item.vala  Note.vala
src/Model/Note/ItemStore/: ItemStore.vala
src/Model/Note/Items/: Stroke.vala
src/Model/Renderer/: ContentPaintable.vala  Renderer.vala  ToolPaintable.vala
src/NoteView/: NoteView.vala  NotesList.vala
src/NoteView/Canvas/: Canvas.vala  KineticScrolling.vala  MoveHandler.vala
src/NoteView/NotesList/: NotesList.vala  NotesListItem.vala
src/NoteView/Penbar/: PenButton.vala  Penbar.vala
src/UI/: CreateNotebookDialog.vala  MainWindow.vala
src/UI/NoteView/: DrawingArea.vala  NoteView.vala  PropertiesDialog.vala
src/UI/NoteView/Canvas/: Canvas.vala  DrawTarget.vala  InputHandler.vala  KineticScrolling.vala  MoveHandler.vala  ToolHolder.vala
src/UI/NoteView/NotesList/: NotesList.vala  NotesListItem.vala  RenameDialog.vala
src/UI/NoteView/Penbar/: ColorCircle.vala  PenButton.vala  PenPopover.vala  Penbar.vala
