files = [
    'Application.vala',
    'Model' / 'Notebook.vala',
    'Model' / 'NotebookManager.vala',
    'Model' / 'Engine' / 'Engine.vala',
    'Model' / 'Engine' / 'Viewport.vala',
    'Model' / 'Engine' / 'Content' / 'Background.vala',
    'Model' / 'Engine' / 'Content' / 'Content.vala',
    'Model' / 'Engine' / 'Content' / 'Item.vala',
    'Model' / 'Engine' / 'Content' / 'Page.vala',
    'Model' / 'Engine' / 'Content' / 'PageFormat.vala',
    'Model' / 'Engine' / 'Content' / 'Pattern.vala',
    'Model' / 'Engine' / 'Content' / 'ViewMode.vala',
    'Model' / 'Engine' / 'Content' / 'Backgrounds' / 'WhiteBackground.vala',
    'Model' / 'Engine' / 'Content' / 'Items' / 'SelectedItem.vala',
    'Model' / 'Engine' / 'Content' / 'Items' / 'Stroke.vala',
    'Model' / 'Engine' / 'Content' / 'ItemStore' / 'ItemStore.vala',
    'Model' / 'Engine' / 'Content' / 'ItemStore' / 'Selection.vala',
    'Model' / 'Engine' / 'Content' / 'Patterns' / 'GridRenderer.vala',
    'Model' / 'Engine' / 'Content' / 'Patterns' / 'PatternRenderer.vala',
    'Model' / 'Engine' / 'Content' / 'ViewModes' / 'InfiniteViewMode.vala',
    'Model' / 'Engine' / 'Database' / 'Database.vala',
    'Model' / 'Engine' / 'Exporter' / 'Exporter.vala',
    'Model' / 'Engine' / 'Exporter' / 'PdfExporter.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tool.vala',
    'Model' / 'Engine' / 'Manipulation' / 'ToolSelection.vala',
    'Model' / 'Engine' / 'Manipulation' / 'ToolStore.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tools' / 'Eraser.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tools' / 'Pen.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tools' / 'RectangleSelector.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tools' / 'ResizeNode.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tools' / 'SelectionFrame.vala',
    'Model' / 'Engine' / 'Manipulation' / 'Tools' / 'SelectionManager.vala',
    'Model' / 'Engine' / 'Renderer' / 'Renderer.vala',
    'Model' / 'Files' / 'Directory.vala',
    'Model' / 'Files' / 'FileBase.vala',
    'Model' / 'Files' / 'FileModel.vala',
    'Model' / 'Files' / 'Note.vala',
    'Model' / 'Files' / 'OperationManager.vala',
    'Model' / 'Geometry' / 'Line.vala',
    'Model' / 'Geometry' / 'Point.vala',
    'UI' / 'CreateNotebookDialog.vala',
    'UI' / 'MainWindow.vala',
    'UI' / 'Library' / 'NotebookList.vala',
    'UI' / 'Library' / 'NotebookListItem.vala',
    'UI' / 'Library' / 'WelcomeView.vala',
    'UI' / 'NoteView' / 'DrawingArea.vala',
    'UI' / 'NoteView' / 'NoteView.vala',
    'UI' / 'NoteView' / 'PropertiesDialog.vala',
    'UI' / 'NoteView' / 'Canvas' / 'Canvas.vala',
    'UI' / 'NoteView' / 'Canvas' / 'InputHandler.vala',
    'UI' / 'NoteView' / 'Canvas' / 'KineticScrolling.vala',
    'UI' / 'NoteView' / 'Canvas' / 'MoveHandler.vala',
    'UI' / 'NoteView' / 'NotesList' / 'NotesListItem.vala',
    'UI' / 'NoteView' / 'NotesList' / 'NotesList.vala',
    'UI' / 'NoteView' / 'NotesList' / 'RenameDialog.vala',
    'UI' / 'NoteView' / 'Penbar' / 'Penbar.vala',
    'UI' / 'NoteView' / 'Penbar' / 'PenButton.vala',
    'UI' / 'NoteView' / 'Penbar' / 'PenPopover.vala',
]

# Create a new executable, list the files we want to compile, and install
executable(
    meson.project_name(),
    config_file,
    gresource,
    files,
    dependencies: deps,
    install: true
)
