files = [
    'Application.vala',
    'Model' / 'Notebook.vala',
    'Model' / 'NotebookManager.vala',
    'Model' / 'Content' / 'Background.vala',
    'Model' / 'Content' / 'Content.vala',
    'Model' / 'Content' / 'Item.vala',
    'Model' / 'Content' / 'OriginIndicator.vala',
    'Model' / 'Content' / 'Page.vala',
    'Model' / 'Content' / 'PageFormat.vala',
    'Model' / 'Content' / 'Pattern.vala',
    'Model' / 'Content' / 'ViewMode.vala',
    'Model' / 'Content' / 'Backgrounds' / 'WhiteBackground.vala',
    'Model' / 'Content' / 'Items' / 'SelectedItem.vala',
    'Model' / 'Content' / 'Items' / 'Stroke.vala',
    'Model' / 'Content' / 'ItemStore' / 'ItemStore.vala',
    'Model' / 'Content' / 'ItemStore' / 'Selection.vala',
    'Model' / 'Content' / 'Patterns' / 'GridRenderer.vala',
    'Model' / 'Content' / 'Patterns' / 'PatternRenderer.vala',
    'Model' / 'Content' / 'ViewModes' / 'InfiniteViewMode.vala',
    'Model' / 'Database' / 'Database.vala',
    'Model' / 'Engine' / 'Engine.vala',
    'Model' / 'Engine' / 'Viewport.vala',
    'Model' / 'Engine' / 'Exporter' / 'Exporter.vala',
    'Model' / 'Engine' / 'Exporter' / 'PdfExporter.vala',
    'Model' / 'Engine' / 'Renderer' / 'Renderer.vala',
    'Model' / 'Files' / 'Directory.vala',
    'Model' / 'Files' / 'FileBase.vala',
    'Model' / 'Files' / 'FileModel.vala',
    'Model' / 'Files' / 'Note.vala',
    'Model' / 'Files' / 'OperationManager.vala',
    'Model' / 'Geometry' / 'Line.vala',
    'Model' / 'Geometry' / 'Point.vala',
    'Model' / 'Manipulation' / 'Tool.vala',
    'Model' / 'Manipulation' / 'ToolSelection.vala',
    'Model' / 'Manipulation' / 'ToolStore.vala',
    'Model' / 'Manipulation' / 'Tools' / 'Eraser.vala',
    'Model' / 'Manipulation' / 'Tools' / 'Pen.vala',
    'Model' / 'Manipulation' / 'Tools' / 'RectangleSelector.vala',
    'Model' / 'Manipulation' / 'Tools' / 'ResizeNode.vala',
    'Model' / 'Manipulation' / 'Tools' / 'SelectionFrame.vala',
    'Model' / 'Manipulation' / 'Tools' / 'SelectionManager.vala',
    'UI' / 'CreateNotebookDialog.vala',
    'UI' / 'MainWindow.vala',
    'UI' / 'Library' / 'NotebookList.vala',
    'UI' / 'Library' / 'NotebookListItem.vala',
    'UI' / 'Library' / 'WelcomeView.vala',
    'UI' / 'NoteView' / 'DrawingArea.vala',
    'UI' / 'NoteView' / 'NoteView.vala',
    'UI' / 'NoteView' / 'PropertiesDialog.vala',
    'UI' / 'NoteView' / 'Canvas' / 'Canvas.vala',
    'UI' / 'NoteView' / 'Canvas' / 'InputHandler.vala',
    'UI' / 'NoteView' / 'Canvas' / 'KineticScrolling.vala',
    'UI' / 'NoteView' / 'Canvas' / 'MoveHandler.vala',
    'UI' / 'NoteView' / 'NotesList' / 'NotesListItem.vala',
    'UI' / 'NoteView' / 'NotesList' / 'NotesList.vala',
    'UI' / 'NoteView' / 'NotesList' / 'RenameDialog.vala',
    'UI' / 'NoteView' / 'Penbar' / 'Penbar.vala',
    'UI' / 'NoteView' / 'Penbar' / 'PenButton.vala',
    'UI' / 'NoteView' / 'Penbar' / 'PenPopover.vala',
]

# Create a new executable, list the files we want to compile, and install
executable(
    meson.project_name(),
    config_file,
    gresource,
    files,
    dependencies: deps,
    install: true
)
